Update build.gradle.kts
all checks removed